--- a/blog.html
+++ b/blog.html
@@ -9,14 +9,14 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <section class="container my-5">
-        <div class="d-flex flex-column align align-items-center my-5">
-            <h1>Blog</h1>
-          <h1>Basic Question and Answer about Es6</h1>
+    <section class="container bg-black text-light rounded-3 px-5 pb-5">
+        <div class="d-flex flex-column align align-items-center">
+            <h1 class="mt-5">Blog</h1>
+          <h3>Basic Question and Answer about Es6</h3>
 
       </div>
-          <div class="accordion" id="accordionExample">
-              <div class="accordion-item">
+          <div class="accordion my-4" id="accordionExample">
+              <div class="accordion-item ">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     <p>What are the different Between local storage vs session storage? </p>
@@ -60,12 +60,21 @@
               <div class="accordion-item">
                   <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      <p>How and when we get undefiend?</p>
+                      <p>How and when we get undefined?</p>
                     </button>
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <p><strong>Ways to find undefiend.</strong> </p>
+                      <p><strong>Ways to find undefined.</strong> <br>
+                    1. Variable that is not initialized will give undefined. <br>
+                    2. Paremeter that is not passed will be undefined. <br>
+                    3. function with no return give will you undefined. <br>
+                    4. Without value(in the right side of return) return will give undefined. <br>
+                    5. Property does not exist in the object that will give you undefined. <br>
+                    6. assecing array elements outside of the array index give undifined. <br>
+                    7. Seleting an element inside an array give undifined.<br>
+                    8. Directly set a value will show undifined.<br> 
+                    </p>
                     </div>
                   </div>
                 </div>
