--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <section class="container bg-black text-light rounded-3 px-5 pb-5">
-        <div class="d-flex flex-column align align-items-center">
+    <section class="container  text-light rounded-3 px-5 pb-5 " style="background-image: url('./bg.png');">
+        <div class="d-flex flex-column align align-items-center ">
             <h1 class="mt-5">Blog</h1>
           <h3>Basic Question and Answer about Es6</h3>
 
