overall blog part added

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <section class="container  text-light rounded-3 px-5 pb-5 " style="background-image: url('./bg.png');">
         <div class="d-flex flex-column align align-items-center ">
             <h1 class="mt-5">Blog</h1>
-          <h3>Basic Question and Answer about Es6</h3>
+          <h3>Few Questions and Answer about Javascript</h3>
 
       </div>
           <div class="accordion my-4" id="accordionExample">
@@ -24,7 +24,7 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                      <p><strong>local storage: </strong> It is a web storage method that helps us store data on the client’s computer in the form of key/value pairs in a web browser. The data is stored in local storage for a lifetime unless the user manually deletes it from the browser. It does not expire even when the user closes the window or tab. Instead, the data remains in the browser until and unless the browser's memory is cleared.</p>
+                      <p><strong>local storage: </strong> It is a web storage method that helps us store data on the client's computer in the form of key/value pairs in a web browser. The data is stored in local storage for a lifetime unless the user manually deletes it from the browser. It does not expire even when the user closes the window or tab. Instead, the data remains in the browser until and unless the browser's memory is cleared.</p>
                       <p><strong>session storage: </strong> It is very similar to the local storage. Still, the main difference lies in the lifespan as it persists in the browser until its current tab is on. Once you close the tab or terminate it, the data on session storage also gets lost. We can also set and retrieve its data using setItem() and getItem() methods, respectively, similar to the local storage methods.</p>
                   </div>
                 </div>
